--- a/index.ipynb
+++ b/index.ipynb
@@ -51,10 +51,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def g_of_x(x):\n",
@@ -63,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +70,7 @@
        "4.0"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,10 +81,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def f_of_x(x):\n",
@@ -95,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -106,7 +102,7 @@
        "16.0"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,9 +142,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ],
+      "text/vnd.plotly.v1+html": [
+       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/html": [
@@ -166,9 +174,11 @@
       "application/vnd.plotly.v1+json": {
        "data": [
         {
-         "mode": "line",
+         "mode": "lines",
          "name": "f(x) = (g(x))^2",
          "text": [],
+         "type": "scatter",
+         "uid": "bf2430aa-2270-11e9-8ee4-4d819ac3c1cc",
          "x": [
           0,
           1,
@@ -195,9 +205,11 @@
          ]
         },
         {
-         "mode": "line",
+         "mode": "lines",
          "name": "g(x) = .5*x",
          "text": [],
+         "type": "scatter",
+         "uid": "bf2432d0-2270-11e9-8ee4-4d819ac3c1cc",
          "x": [
           0,
           1,
@@ -227,10 +239,10 @@
        "layout": {}
       },
       "text/html": [
-       "<div id=\"653c3861-6c12-4506-9942-03e5205d4d85\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"653c3861-6c12-4506-9942-03e5205d4d85\", [{\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [3.0, 3.5, 4.0, 4.5, 5.0, 5.5, 6.0, 6.5, 7.0, 7.5], \"mode\": \"line\", \"name\": \"f(x) = (g(x))^2\", \"text\": []}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [9.0, 12.25, 16.0, 20.25, 25.0, 30.25, 36.0, 42.25, 49.0, 56.25], \"mode\": \"line\", \"name\": \"g(x) = .5*x\", \"text\": []}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"d35fff94-3bd3-4d3e-a207-2347e17294d8\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"d35fff94-3bd3-4d3e-a207-2347e17294d8\", [{\"mode\": \"lines\", \"name\": \"f(x) = (g(x))^2\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [3.0, 3.5, 4.0, 4.5, 5.0, 5.5, 6.0, 6.5, 7.0, 7.5], \"type\": \"scatter\", \"uid\": \"bf4ecb76-2270-11e9-8ee4-4d819ac3c1cc\"}, {\"mode\": \"lines\", \"name\": \"g(x) = .5*x\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [9.0, 12.25, 16.0, 20.25, 25.0, 30.25, 36.0, 42.25, 49.0, 56.25], \"type\": \"scatter\", \"uid\": \"bf4ecd60-2270-11e9-8ee4-4d819ac3c1cc\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ],
       "text/vnd.plotly.v1+html": [
-       "<div id=\"653c3861-6c12-4506-9942-03e5205d4d85\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"653c3861-6c12-4506-9942-03e5205d4d85\", [{\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [3.0, 3.5, 4.0, 4.5, 5.0, 5.5, 6.0, 6.5, 7.0, 7.5], \"mode\": \"line\", \"name\": \"f(x) = (g(x))^2\", \"text\": []}, {\"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [9.0, 12.25, 16.0, 20.25, 25.0, 30.25, 36.0, 42.25, 49.0, 56.25], \"mode\": \"line\", \"name\": \"g(x) = .5*x\", \"text\": []}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
+       "<div id=\"d35fff94-3bd3-4d3e-a207-2347e17294d8\" style=\"height: 525px; width: 100%;\" class=\"plotly-graph-div\"></div><script type=\"text/javascript\">require([\"plotly\"], function(Plotly) { window.PLOTLYENV=window.PLOTLYENV || {};window.PLOTLYENV.BASE_URL=\"https://plot.ly\";Plotly.newPlot(\"d35fff94-3bd3-4d3e-a207-2347e17294d8\", [{\"mode\": \"lines\", \"name\": \"f(x) = (g(x))^2\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [3.0, 3.5, 4.0, 4.5, 5.0, 5.5, 6.0, 6.5, 7.0, 7.5], \"type\": \"scatter\", \"uid\": \"bf4ecb76-2270-11e9-8ee4-4d819ac3c1cc\"}, {\"mode\": \"lines\", \"name\": \"g(x) = .5*x\", \"text\": [], \"x\": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9], \"y\": [9.0, 12.25, 16.0, 20.25, 25.0, 30.25, 36.0, 42.25, 49.0, 56.25], \"type\": \"scatter\", \"uid\": \"bf4ecd60-2270-11e9-8ee4-4d819ac3c1cc\"}], {}, {\"showLink\": true, \"linkText\": \"Export to plot.ly\"})});</script>"
       ]
      },
      "metadata": {},
@@ -329,7 +341,7 @@
    "source": [
     "Remember we started with the function $f(x) = (.5x + 3)^2 $.  Then we used functional composition to split this into two.\n",
     "\n",
-    "$$g(x) = x^2$$\n",
+    "$$g(x) = (.5x + 3)$$\n",
     "$$f(x) = (g(x))^2$$\n",
     "\n",
     "**2. Find the derivatives, $f'(x)$ and $g'(x)$**\n",
@@ -344,9 +356,10 @@
     "\n",
     "Then substituting for $g(x)$, which we already defined, we have: \n",
     "\n",
-    "$f'(g(x)) = g(x) = x^2$\n",
+    "$f'(g(x)) = g(x) = (.5x + 3)$\n",
     "\n",
-    "So the derivative of the function $f(x) = (.5x + 3)^2 $ is $f'(x) = x^2 $"
+    "So the derivative of the function $f(x) = (.5x + 3)^2 $ is $f'(x) = (.5x + 3)\n",
+    "$"
    ]
   },
   {
@@ -451,7 +464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
